# Algorithmic_Pricing_Recommendation_Systems_Competition

./: README.md
LE_No_RS_Het/: LE_Coll_No_RS_Het.m  LE_Comp_No_RS_Het.m
LE_No_RS_Het_a/: LE_Comp_No_RS_Het_a.m  (+5 more)
No_RS_Het_theta_gamma/: CMakeLists.txt  Functions.cpp  Functions.h  Global.cpp  Global.h  No_RS_Het_theta_gamma.sb  main.cpp
No_RS_Het_theta_gamma/No_RS_Het_theta_gamma_Results/: No_RS_Het_theta_gamma_CS.csv  No_RS_Het_theta_gamma_Prices_Sellers.csv  No_RS_Het_theta_gamma_Profits_Sellers.csv
RS_Het_alpha_beta_Heat/: CMakeLists.txt  Functions.cpp  Functions.h  Global.cpp  Global.h  RS_Het_alpha_beta_Heat.sb  RS_Het_alpha_beta_Heat_Results.m  main.cpp
RS_Het_alpha_beta_Heat/RS_Het_alpha_beta_Heat_omega_1_Results/: RS_Het_alpha_beta_Heat_omega_1_Actions_Plat.csv  RS_Het_alpha_beta_Heat_omega_1_CS.csv  RS_Het_alpha_beta_Heat_omega_1_Convergence.csv  RS_Het_alpha_beta_Heat_omega_1_Prices_Sellers.csv  RS_Het_alpha_beta_Heat_omega_1_Profits_Sellers.csv
RS_Het_alpha_beta_Heat/RS_Het_alpha_beta_Heat_omega_2_Results/: RS_Het_alpha_beta_Heat_omega_2_Actions_Plat.csv  RS_Het_alpha_beta_Heat_omega_2_CS.csv  RS_Het_alpha_beta_Heat_omega_2_Convergence.csv  RS_Het_alpha_beta_Heat_omega_2_Prices_Sellers.csv  RS_Het_alpha_beta_Heat_omega_2_Profits_Sellers.csv
RS_Het_alpha_beta_Heat/RS_Het_alpha_beta_Heat_omega_3_Results/: RS_Het_alpha_beta_Heat_omega_3_Actions_Plat.csv  RS_Het_alpha_beta_Heat_omega_3_CS.csv  RS_Het_alpha_beta_Heat_omega_3_Convergence.csv  RS_Het_alpha_beta_Heat_omega_3_Prices_Sellers.csv  RS_Het_alpha_beta_Heat_omega_3_Profits_Sellers.csv
(+270 files in other folders)
